app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

textarea,
input {
  @apply border-gray m-0 border bg-white p-2 px-3 shadow-sm outline-none focus:outline focus:-outline-offset-1 focus:outline-primary disabled:bg-gray-100;
}

h1 {
  @apply text-3xl;
}

h2 {
  @apply text-2xl;
}

h3 {
  @apply text-xl;
}

table {
  @apply border-gray-light w-full border-separate border-spacing-0 rounded border;
}

tr {
  @apply w-full;
}

th {
  @apply border-gray-light text-nowrap border-b px-4 py-2 text-left font-medium uppercase;
}

th:not(:first-child):not(:last-child) {
  @apply border-l;
}

td {
  @apply border-gray-light border-b px-4 py-4 text-left;
}

.skeleton-animation {
  background: rgba(130, 130, 130, 0.2);
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    color-stop(8%, rgba(130, 130, 130, 0.2)),
    color-stop(18%, rgba(130, 130, 130, 0.3)),
    color-stop(33%, rgba(130, 130, 130, 0.2))
  );
  background: linear-gradient(
    to right,
    rgba(130, 130, 130, 0.2) 8%,
    rgba(130, 130, 130, 0.3) 18%,
    rgba(130, 130, 130, 0.2) 33%
  );
  background-size: 800px 100px;
  animation: wave-lines 2s infinite ease-out;
}

